# Einstein

./: .gitignore  CMakeLists.txt
Drivers/: Einstein.rex.src  Makefile  PATStack.h  PAppleTalkStack.h  PBatteryDriver.h  PEinsteinInTranslator.cpp  PEinsteinInTranslator.impl.h  PEinsteinOutTranslator.cpp  PEinsteinOutTranslator.impl.h  PInTranslator.h  PMainBatteryDriver.cpp  PMainBatteryDriver.impl.h  PMainSoundDriver.cpp  PMainSoundDriver.impl.h  POutTranslator.h  PSoundDriver.h  TCommTool.h  TEinsteinFlashDriver.cpp  TEinsteinFlashDriver.impl.h  TEinsteinNativeCalls.cpp  TEinsteinNativeCalls.impl.h  TFlashDriver.h  TInetService.cpp  TInetService.impl.h  TInetTool.cpp  TInetTool.h  TMainDisplayDriver.cpp  TMainDisplayDriver.impl.h  TMainPlatformDriver.cpp  TMainPlatformDriver.impl.h  TMainStartupDriver.cpp  TMainStartupDriver.impl.h  TMainTabletDriver.cpp  TMainTabletDriver.impl.h  TMainVersionString.cpp  TMainVersionString.impl.h  TNativeCalls.h  TPlatformDriver.h  TScreenDriver.h  TSerialChipEinstein.cpp  (+10 more)
Emulator/: TEmulator.cpp  TNativePrimitives.cpp  TNativePrimitives.h
Emulator/Host/: UserInfoDefinitions.h
Emulator/Platform/: PlatformEvents.h
Emulator/ROM/: TAIFROMImageWithREXes.cpp  TFlatROMImageWithREX.cpp
Emulator/Serial/: TSerialHostPort.h  TSerialHostPortDirect.cpp  TSerialHostPortDirect.h  TSerialHostPortPTY.cpp  TSerialHostPortPTY.h  TSerialPorts.cpp  TSerialPorts.h
Resources/Base.lproj/: Einstein.xib
_Build_/Xcode/Einstein.xcodeproj/: project.pbxproj
app/: TCocoaAppController.mm  TCocoaSetupController.h  TCocoaUserDefaults.h  TFLApp.cpp  Version.h.in
